Add MarqueeText component and integrate into ConverterTab
- Introduced a new MarqueeText component for animated text display.
- Integrated MarqueeText into the ConverterTab for displaying selected file names with a scrolling effect.
- Updated category labels and preset names/descriptions to use helper functions for improved localization support.
- Enhanced button styling for better visual consistency during file selection.

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -150,6 +150,56 @@
       "completed": "Завършено",
       "failed": "Неуспешно",
       "cancelled": "Отказано"
+    },
+    "categories": {
+      "audio": "Аудио формати",
+      "video": "Видео формати",
+      "resize": "Резолюция",
+      "gif": "GIF",
+      "extract": "Извличане",
+      "trim": "Изрязване"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Високо качество",
+      "audio-mp3-192": "MP3 Стандарт",
+      "audio-mp3-128": "MP3 Компактен",
+      "audio-aac-256": "AAC Високо качество",
+      "audio-flac": "FLAC Без загуби",
+      "audio-wav": "WAV Некомпресиран",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Съвместим",
+      "video-mp4-h264-hq": "MP4 Високо качество",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Стар формат",
+      "video-1080p": "Мащабиране до 1080p",
+      "video-720p": "Мащабиране до 720p",
+      "video-480p": "Мащабиране до 480p",
+      "gif-standard": "GIF Стандартен",
+      "gif-small": "GIF Малък",
+      "extract-audio": "Извличане на аудио",
+      "trim-copy": "Бързо изрязване"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Конвертиране в MP3 на 320kbps",
+      "audio-mp3-192": "Конвертиране в MP3 на 192kbps",
+      "audio-mp3-128": "Конвертиране в MP3 на 128kbps (по-малък файл)",
+      "audio-aac-256": "Конвертиране в AAC на 256kbps",
+      "audio-flac": "Конвертиране във FLAC формат без загуби",
+      "audio-wav": "Конвертиране в некомпресиран WAV формат",
+      "audio-ogg": "Конвертиране в OGG Vorbis качество 6",
+      "video-mp4-h264": "H.264 видео, широка съвместимост",
+      "video-mp4-h264-hq": "H.264 видео, високо качество",
+      "video-mp4-h265": "H.265/HEVC видео, по-малък размер",
+      "video-webm": "VP9 видео за уеб",
+      "video-avi": "AVI формат за стари устройства",
+      "video-1080p": "Мащабиране на видео до 1920x1080",
+      "video-720p": "Мащабиране на видео до 1280x720",
+      "video-480p": "Мащабиране на видео до 854x480",
+      "gif-standard": "Анимиран GIF, 15 FPS, макс 480px",
+      "gif-small": "Малък GIF, 10 FPS, макс 320px",
+      "extract-audio": "Извличане на аудио без прекодиране",
+      "trim-copy": "Изрязване на видео без прекодиране (бързо)"
     }
   },
   "errors": {
