--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -150,6 +150,56 @@
       "completed": "Abgeschlossen",
       "failed": "Fehlgeschlagen",
       "cancelled": "Abgebrochen"
+    },
+    "categories": {
+      "audio": "Audioformate",
+      "video": "Videoformate",
+      "resize": "Auflösung",
+      "gif": "GIF",
+      "extract": "Extrahieren",
+      "trim": "Schneiden"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Hohe Qualität",
+      "audio-mp3-192": "MP3 Standard",
+      "audio-mp3-128": "MP3 Kompakt",
+      "audio-aac-256": "AAC Hohe Qualität",
+      "audio-flac": "FLAC Verlustfrei",
+      "audio-wav": "WAV Unkomprimiert",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Kompatibel",
+      "video-mp4-h264-hq": "MP4 Hohe Qualität",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Legacy",
+      "video-1080p": "Auf 1080p skalieren",
+      "video-720p": "Auf 720p skalieren",
+      "video-480p": "Auf 480p skalieren",
+      "gif-standard": "GIF Standard",
+      "gif-small": "GIF Klein",
+      "extract-audio": "Audio extrahieren",
+      "trim-copy": "Schnellschnitt"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Konvertieren zu MP3 mit 320kbps",
+      "audio-mp3-192": "Konvertieren zu MP3 mit 192kbps",
+      "audio-mp3-128": "Konvertieren zu MP3 mit 128kbps (kleinere Datei)",
+      "audio-aac-256": "Konvertieren zu AAC mit 256kbps",
+      "audio-flac": "Konvertieren zu verlustfreiem FLAC-Format",
+      "audio-wav": "Konvertieren zu unkomprimiertem WAV-Format",
+      "audio-ogg": "Konvertieren zu OGG Vorbis Qualität 6",
+      "video-mp4-h264": "H.264 Video, weitgehend kompatibel",
+      "video-mp4-h264-hq": "H.264 Video, hohe Qualität",
+      "video-mp4-h265": "H.265/HEVC Video, kleinere Dateigröße",
+      "video-webm": "VP9 Video für Web",
+      "video-avi": "AVI-Format für ältere Geräte",
+      "video-1080p": "Video auf 1920x1080 skalieren",
+      "video-720p": "Video auf 1280x720 skalieren",
+      "video-480p": "Video auf 854x480 skalieren",
+      "gif-standard": "Animiertes GIF, 15 FPS, max 480px",
+      "gif-small": "Kleines GIF, 10 FPS, max 320px",
+      "extract-audio": "Audiospur ohne Neukodierung extrahieren",
+      "trim-copy": "Video ohne Neukodierung schneiden (schnell)"
     }
   },
   "errors": {
