--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -150,6 +150,56 @@
       "completed": "Ολοκληρώθηκε",
       "failed": "Απέτυχε",
       "cancelled": "Ακυρώθηκε"
+    },
+    "categories": {
+      "audio": "Μορφές Ήχου",
+      "video": "Μορφές Βίντεο",
+      "resize": "Ανάλυση",
+      "gif": "GIF",
+      "extract": "Εξαγωγή",
+      "trim": "Περικοπή"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Υψηλή Ποιότητα",
+      "audio-mp3-192": "MP3 Κανονικό",
+      "audio-mp3-128": "MP3 Συμπαγές",
+      "audio-aac-256": "AAC Υψηλή Ποιότητα",
+      "audio-flac": "FLAC Χωρίς Απώλειες",
+      "audio-wav": "WAV Ασυμπίεστο",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Συμβατό",
+      "video-mp4-h264-hq": "MP4 Υψηλή Ποιότητα",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Παλαιού Τύπου",
+      "video-1080p": "Κλιμάκωση σε 1080p",
+      "video-720p": "Κλιμάκωση σε 720p",
+      "video-480p": "Κλιμάκωση σε 480p",
+      "gif-standard": "GIF Κανονικό",
+      "gif-small": "GIF Μικρό",
+      "extract-audio": "Εξαγωγή Ήχου",
+      "trim-copy": "Γρήγορη Περικοπή"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Μετατροπή σε MP3 στα 320kbps",
+      "audio-mp3-192": "Μετατροπή σε MP3 στα 192kbps",
+      "audio-mp3-128": "Μετατροπή σε MP3 στα 128kbps (μικρότερο αρχείο)",
+      "audio-aac-256": "Μετατροπή σε AAC στα 256kbps",
+      "audio-flac": "Μετατροπή σε μορφή FLAC χωρίς απώλειες",
+      "audio-wav": "Μετατροπή σε ασυμπίεστη μορφή WAV",
+      "audio-ogg": "Μετατροπή σε OGG Vorbis ποιότητα 6",
+      "video-mp4-h264": "Βίντεο H.264, ευρεία συμβατότητα",
+      "video-mp4-h264-hq": "Βίντεο H.264, υψηλή ποιότητα",
+      "video-mp4-h265": "Βίντεο H.265/HEVC, μικρότερο μέγεθος",
+      "video-webm": "Βίντεο VP9 για web",
+      "video-avi": "Μορφή AVI για παλαιότερες συσκευές",
+      "video-1080p": "Κλιμάκωση βίντεο σε 1920x1080",
+      "video-720p": "Κλιμάκωση βίντεο σε 1280x720",
+      "video-480p": "Κλιμάκωση βίντεο σε 854x480",
+      "gif-standard": "Κινούμενο GIF, 15 FPS, μέγ 480px",
+      "gif-small": "Μικρό GIF, 10 FPS, μέγ 320px",
+      "extract-audio": "Εξαγωγή ήχου χωρίς επανακωδικοποίηση",
+      "trim-copy": "Περικοπή βίντεο χωρίς επανακωδικοποίηση (γρήγορο)"
     }
   },
   "errors": {
