--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -150,6 +150,56 @@
       "completed": "Completed",
       "failed": "Failed",
       "cancelled": "Cancelled"
+    },
+    "categories": {
+      "audio": "Audio Formats",
+      "video": "Video Formats",
+      "resize": "Resolution",
+      "gif": "GIF",
+      "extract": "Extract",
+      "trim": "Trim"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 High Quality",
+      "audio-mp3-192": "MP3 Standard",
+      "audio-mp3-128": "MP3 Compact",
+      "audio-aac-256": "AAC High Quality",
+      "audio-flac": "FLAC Lossless",
+      "audio-wav": "WAV Uncompressed",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Compatible",
+      "video-mp4-h264-hq": "MP4 High Quality",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Legacy",
+      "video-1080p": "Scale to 1080p",
+      "video-720p": "Scale to 720p",
+      "video-480p": "Scale to 480p",
+      "gif-standard": "GIF Standard",
+      "gif-small": "GIF Small",
+      "extract-audio": "Extract Audio",
+      "trim-copy": "Quick Trim"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Convert to MP3 at 320kbps",
+      "audio-mp3-192": "Convert to MP3 at 192kbps",
+      "audio-mp3-128": "Convert to MP3 at 128kbps (smaller file)",
+      "audio-aac-256": "Convert to AAC at 256kbps",
+      "audio-flac": "Convert to lossless FLAC format",
+      "audio-wav": "Convert to uncompressed WAV format",
+      "audio-ogg": "Convert to OGG Vorbis at quality 6",
+      "video-mp4-h264": "H.264 video, widely compatible",
+      "video-mp4-h264-hq": "H.264 video, high quality",
+      "video-mp4-h265": "H.265/HEVC video, smaller file size",
+      "video-webm": "VP9 video for web",
+      "video-avi": "AVI format for older devices",
+      "video-1080p": "Scale video to 1920x1080",
+      "video-720p": "Scale video to 1280x720",
+      "video-480p": "Scale video to 854x480",
+      "gif-standard": "Animated GIF, 15 FPS, max 480px",
+      "gif-small": "Small GIF, 10 FPS, max 320px",
+      "extract-audio": "Extract audio track without re-encoding",
+      "trim-copy": "Trim video without re-encoding (fast)"
     }
   },
   "errors": {
