--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -150,6 +150,56 @@
       "completed": "Completado",
       "failed": "Fallido",
       "cancelled": "Cancelado"
+    },
+    "categories": {
+      "audio": "Formatos de Audio",
+      "video": "Formatos de Video",
+      "resize": "Resolución",
+      "gif": "GIF",
+      "extract": "Extraer",
+      "trim": "Recortar"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Alta Calidad",
+      "audio-mp3-192": "MP3 Estándar",
+      "audio-mp3-128": "MP3 Compacto",
+      "audio-aac-256": "AAC Alta Calidad",
+      "audio-flac": "FLAC Sin Pérdida",
+      "audio-wav": "WAV Sin Comprimir",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Compatible",
+      "video-mp4-h264-hq": "MP4 Alta Calidad",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Legado",
+      "video-1080p": "Escalar a 1080p",
+      "video-720p": "Escalar a 720p",
+      "video-480p": "Escalar a 480p",
+      "gif-standard": "GIF Estándar",
+      "gif-small": "GIF Pequeño",
+      "extract-audio": "Extraer Audio",
+      "trim-copy": "Recorte Rápido"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Convertir a MP3 a 320kbps",
+      "audio-mp3-192": "Convertir a MP3 a 192kbps",
+      "audio-mp3-128": "Convertir a MP3 a 128kbps (archivo más pequeño)",
+      "audio-aac-256": "Convertir a AAC a 256kbps",
+      "audio-flac": "Convertir a formato FLAC sin pérdida",
+      "audio-wav": "Convertir a formato WAV sin comprimir",
+      "audio-ogg": "Convertir a OGG Vorbis calidad 6",
+      "video-mp4-h264": "Video H.264, amplia compatibilidad",
+      "video-mp4-h264-hq": "Video H.264, alta calidad",
+      "video-mp4-h265": "Video H.265/HEVC, archivo más pequeño",
+      "video-webm": "Video VP9 para web",
+      "video-avi": "Formato AVI para dispositivos antiguos",
+      "video-1080p": "Escalar video a 1920x1080",
+      "video-720p": "Escalar video a 1280x720",
+      "video-480p": "Escalar video a 854x480",
+      "gif-standard": "GIF animado, 15 FPS, máx 480px",
+      "gif-small": "GIF pequeño, 10 FPS, máx 320px",
+      "extract-audio": "Extraer pista de audio sin recodificar",
+      "trim-copy": "Recortar video sin recodificar (rápido)"
     }
   },
   "errors": {
