--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -150,6 +150,56 @@
       "completed": "Terminé",
       "failed": "Échec",
       "cancelled": "Annulé"
+    },
+    "categories": {
+      "audio": "Formats Audio",
+      "video": "Formats Vidéo",
+      "resize": "Résolution",
+      "gif": "GIF",
+      "extract": "Extraire",
+      "trim": "Couper"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Haute Qualité",
+      "audio-mp3-192": "MP3 Standard",
+      "audio-mp3-128": "MP3 Compact",
+      "audio-aac-256": "AAC Haute Qualité",
+      "audio-flac": "FLAC Sans Perte",
+      "audio-wav": "WAV Non Compressé",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Compatible",
+      "video-mp4-h264-hq": "MP4 Haute Qualité",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Ancien",
+      "video-1080p": "Redimensionner en 1080p",
+      "video-720p": "Redimensionner en 720p",
+      "video-480p": "Redimensionner en 480p",
+      "gif-standard": "GIF Standard",
+      "gif-small": "GIF Petit",
+      "extract-audio": "Extraire l'Audio",
+      "trim-copy": "Coupe Rapide"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Convertir en MP3 à 320kbps",
+      "audio-mp3-192": "Convertir en MP3 à 192kbps",
+      "audio-mp3-128": "Convertir en MP3 à 128kbps (fichier plus petit)",
+      "audio-aac-256": "Convertir en AAC à 256kbps",
+      "audio-flac": "Convertir en format FLAC sans perte",
+      "audio-wav": "Convertir en format WAV non compressé",
+      "audio-ogg": "Convertir en OGG Vorbis qualité 6",
+      "video-mp4-h264": "Vidéo H.264, largement compatible",
+      "video-mp4-h264-hq": "Vidéo H.264, haute qualité",
+      "video-mp4-h265": "Vidéo H.265/HEVC, fichier plus petit",
+      "video-webm": "Vidéo VP9 pour le web",
+      "video-avi": "Format AVI pour anciens appareils",
+      "video-1080p": "Redimensionner vidéo en 1920x1080",
+      "video-720p": "Redimensionner vidéo en 1280x720",
+      "video-480p": "Redimensionner vidéo en 854x480",
+      "gif-standard": "GIF animé, 15 IPS, max 480px",
+      "gif-small": "Petit GIF, 10 IPS, max 320px",
+      "extract-audio": "Extraire la piste audio sans réencodage",
+      "trim-copy": "Couper la vidéo sans réencodage (rapide)"
     }
   },
   "errors": {
