--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -150,6 +150,56 @@
       "completed": "Concluído",
       "failed": "Falhou",
       "cancelled": "Cancelado"
+    },
+    "categories": {
+      "audio": "Formatos de Áudio",
+      "video": "Formatos de Vídeo",
+      "resize": "Resolução",
+      "gif": "GIF",
+      "extract": "Extrair",
+      "trim": "Cortar"
+    },
+    "presetNames": {
+      "audio-mp3-320": "MP3 Alta Qualidade",
+      "audio-mp3-192": "MP3 Padrão",
+      "audio-mp3-128": "MP3 Compacto",
+      "audio-aac-256": "AAC Alta Qualidade",
+      "audio-flac": "FLAC Sem Perdas",
+      "audio-wav": "WAV Não Comprimido",
+      "audio-ogg": "OGG Vorbis",
+      "video-mp4-h264": "MP4 Compatível",
+      "video-mp4-h264-hq": "MP4 Alta Qualidade",
+      "video-mp4-h265": "MP4 HEVC",
+      "video-webm": "WebM VP9",
+      "video-avi": "AVI Legado",
+      "video-1080p": "Redimensionar para 1080p",
+      "video-720p": "Redimensionar para 720p",
+      "video-480p": "Redimensionar para 480p",
+      "gif-standard": "GIF Padrão",
+      "gif-small": "GIF Pequeno",
+      "extract-audio": "Extrair Áudio",
+      "trim-copy": "Corte Rápido"
+    },
+    "presetDescriptions": {
+      "audio-mp3-320": "Converter para MP3 a 320kbps",
+      "audio-mp3-192": "Converter para MP3 a 192kbps",
+      "audio-mp3-128": "Converter para MP3 a 128kbps (arquivo menor)",
+      "audio-aac-256": "Converter para AAC a 256kbps",
+      "audio-flac": "Converter para formato FLAC sem perdas",
+      "audio-wav": "Converter para formato WAV não comprimido",
+      "audio-ogg": "Converter para OGG Vorbis qualidade 6",
+      "video-mp4-h264": "Vídeo H.264, amplamente compatível",
+      "video-mp4-h264-hq": "Vídeo H.264, alta qualidade",
+      "video-mp4-h265": "Vídeo H.265/HEVC, arquivo menor",
+      "video-webm": "Vídeo VP9 para web",
+      "video-avi": "Formato AVI para dispositivos antigos",
+      "video-1080p": "Redimensionar vídeo para 1920x1080",
+      "video-720p": "Redimensionar vídeo para 1280x720",
+      "video-480p": "Redimensionar vídeo para 854x480",
+      "gif-standard": "GIF animado, 15 FPS, máx 480px",
+      "gif-small": "GIF pequeno, 10 FPS, máx 320px",
+      "extract-audio": "Extrair faixa de áudio sem recodificar",
+      "trim-copy": "Cortar vídeo sem recodificar (rápido)"
     }
   },
   "errors": {
