Add theme customization options and integrate into settings

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -78,6 +78,17 @@
       "download": "Изтегляне",
       "advanced": "Разширени"
     },
+    "theme": {
+      "title": "Външен вид",
+      "description": "Персонализирайте изгледа на приложението",
+      "mode": "Режим на темата",
+      "modes": {
+        "light": "Светла",
+        "dark": "Тъмна",
+        "system": "Системна"
+      },
+      "accentColor": "Акцентен цвят"
+    },
     "fields": {
       "language": "Език",
       "savePath": "Папка за запазване",
