--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -78,6 +78,17 @@
       "download": "Προτιμήσεις λήψης",
       "advanced": "Για προχωρημένους"
     },
+    "theme": {
+      "title": "Εμφάνιση",
+      "description": "Προσαρμόστε την εμφάνιση της εφαρμογής",
+      "mode": "Λειτουργία Θέματος",
+      "modes": {
+        "light": "Φωτεινό",
+        "dark": "Σκοτεινό",
+        "system": "Σύστημα"
+      },
+      "accentColor": "Χρώμα Έμφασης"
+    },
     "fields": {
       "language": "Γλώσσα",
       "savePath": "Φάκελος αποθήκευσης",
